# django-saas

./: README.md
backend/: pyproject.toml
backend/server/apps/accounts/: urls.py
backend/server/server/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/components/signup/: Signup.js
