[tool.poetry]
name = "definet-saas-backend"
version = "0.1.0"
description = "The backend for DeFiNet's SaaS offering"
authors = ["Leo Guinan <leo@definet.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
djangorestframework = "3.11.2"
Markdown = "^3.3.4"
django-filter = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
